<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trangchu"
            android:title="@string/nav_trangchu"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/nav_thongbao"
            android:title="@string/nav_thongbao"
            android:icon="@drawable/ic_notifications"/>
    </group>
    <item android:title="@string/nav_hoso">
        <menu>
            <item
                android:id="@+id/nav_thongtincanhan"
                android:title="@string/nav_thongtincanhan"
                android:icon="@drawable/ic_profile"/>
            <item
                android:id="@+id/nav_doimatkhau"
                android:title="@string/nav_doimatkhau"
                android:icon="@drawable/ic_change_password"/>
            <item
                android:id="@+id/nav_dangxuat"
                android:title="@string/nav_dangxuat"
                android:icon="@drawable/ic_logout"/>
        </menu>
    </item>
</menu>